--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -52,7 +52,9 @@
 						<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li>
 					</ul>
 				</div><!-- misc -->
+
 				<p class="licence">
+                    <script id="fedora-banner" type="text/javascript" src="http://fedoraproject.org/static/js/release-counter-ext.js?lang=en"></script>
 					Theme: <a href="http://layouts-the.me">the_minimum</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>.<br>
                     Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a><br/>
                     Copyright : {{ site.author.name }}
